# landing_page_rs

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: collect_api.rs  collect_models.rs  main.rs
backend/src/utils/: email.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: footer.rs  form.rs  header.rs  result_box.rs
frontend/static/: style.css
