[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
lettre = "0.11.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
rocket_cors = "0.6.0"
openssl = { version = "0.10.59", features = ["vendored"] }

[profile.release]
lto = "fat" 
debug = false
codegen-units = 1

[[bin]]
name = "backend"
path = "src/main.rs"